# pypette-catster

./: Makefile  Pipfile  app.py  dotenv.example  pyproject.toml
docker/: Dockerfile  server.py
static/: credits.txt
views/: base.tpl  image.tpl
